; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-write-queue-order.c_connection_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-write-queue-order.c_connection_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@incoming = common dso_local global i32 0, align 4
@timer = common dso_local global i32 0, align 4
@timer_cb = common dso_local global i32 0, align 4
@connection_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32)* @connection_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @connection_cb(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @uv_tcp_init(i32 %11, i32* @incoming)
  %13 = icmp eq i64 0, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = call i64 @uv_accept(%struct.TYPE_5__* %16, %struct.TYPE_5__* bitcast (i32* @incoming to %struct.TYPE_5__*))
  %18 = icmp eq i64 0, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @ASSERT(i32 %19)
  %21 = call i32 (...) @uv_default_loop()
  %22 = call i64 @uv_timer_init(i32 %21, i32* @timer)
  %23 = icmp eq i64 0, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @ASSERT(i32 %24)
  %26 = load i32, i32* @timer_cb, align 4
  %27 = call i64 @uv_timer_start(i32* @timer, i32 %26, i32 1000, i32 0)
  %28 = icmp eq i64 0, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @ASSERT(i32 %29)
  %31 = load i32, i32* @connection_cb_called, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* @connection_cb_called, align 4
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_tcp_init(i32, i32*) #1

declare dso_local i64 @uv_accept(%struct.TYPE_5__*, %struct.TYPE_5__*) #1

declare dso_local i64 @uv_timer_init(i32, i32*) #1

declare dso_local i32 @uv_default_loop(...) #1

declare dso_local i64 @uv_timer_start(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
